auth service complete